# treasury-yield-regime-forecasting

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  features.yaml
data/: README.md
docs/: Final_Project_Report.docx  Presentation.pptx
examples/: fred_combined_10yrs.csv
notebooks/: treasury_yield_forecasting_regime_nn.ipynb
references/: README.md
scripts/: download_data.py  generate_sample_data.py  train_all.py
src/treasury_forecaster/: __init__.py
src/treasury_forecaster/analysis/: feature_importance.py
src/treasury_forecaster/data/: features.py  fred_loader.py  ingest_existing.py  regimes.py  simulate_shocks.py
src/treasury_forecaster/models/: cnn.py  domain_informed.py  fnn.py  lstm.py  transformer.py
src/treasury_forecaster/training/: train.py
